fix: content overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,5 @@ body {
 }
 
 .prose {
-  max-width: 100% !important;
   width: 100%;
 }
